[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/fonts/PT-Italic_16.tres" type="DynamicFont" id=1]
[ext_resource path="res://assets/fonts/PT-Regular_16_Button.tres" type="DynamicFont" id=2]
[ext_resource path="res://assets/fonts/PT-Bold_16.tres" type="DynamicFont" id=3]
[ext_resource path="res://assets/textures/icons/trash24x24.png" type="Texture" id=4]
[ext_resource path="res://assets/textures/icons/edit.png" type="Texture" id=5]
[ext_resource path="res://src/interfaces/Items/Ingredient_CreateShoppingList_Item.gd" type="Script" id=6]

[sub_resource type="StyleBoxLine" id=2]
color = Color( 0.403922, 0.403922, 0.403922, 1 )
grow_begin = -4.0
grow_end = -4.0
vertical = true

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxLine" id=3]
color = Color( 0.533333, 0.533333, 0.533333, 0.698039 )
grow_begin = -8.0
grow_end = -8.0
thickness = 2

[node name="Ingredient_CreateShoppingList_Item" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -1046.0
size_flags_horizontal = 3
custom_constants/margin_right = 4
custom_constants/margin_top = 2
custom_constants/margin_left = 4
custom_constants/margin_bottom = 2
script = ExtResource( 6 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 4.0
margin_top = 2.0
margin_right = 1916.0
margin_bottom = 32.0

[node name="CheckBox" type="CheckBox" parent="HBoxContainer"]
margin_right = 24.0
margin_bottom = 30.0
focus_mode = 0
enabled_focus_mode = 0

[node name="VSeparator2" type="VSeparator" parent="HBoxContainer"]
margin_left = 28.0
margin_right = 32.0
margin_bottom = 30.0
custom_styles/separator = SubResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer"]
margin_left = 36.0
margin_right = 1840.0
margin_bottom = 30.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/MarginContainer"]
margin_right = 1804.0
margin_bottom = 30.0

[node name="Quantity" type="Label" parent="HBoxContainer/MarginContainer/HBoxContainer"]
margin_right = 86.0
margin_bottom = 30.0
rect_min_size = Vector2( 86, 0 )
size_flags_vertical = 3
custom_fonts/font = ExtResource( 3 )
valign = 1
autowrap = true

[node name="Ingredient" type="RichTextLabel" parent="HBoxContainer/MarginContainer/HBoxContainer"]
margin_left = 90.0
margin_top = 4.0
margin_right = 1804.0
margin_bottom = 26.0
size_flags_horizontal = 3
size_flags_vertical = 4
custom_constants/table_hseparation = 0
custom_constants/line_separation = 0
custom_constants/shadow_as_outline = 0
custom_fonts/italics_font = ExtResource( 1 )
custom_fonts/normal_font = ExtResource( 2 )
custom_styles/focus = SubResource( 1 )
custom_styles/normal = SubResource( 1 )
bbcode_enabled = true
fit_content_height = true
scroll_active = false

[node name="Strike" type="HSeparator" parent="HBoxContainer/MarginContainer"]
visible = false
margin_top = 13.0
margin_right = 1804.0
margin_bottom = 17.0
size_flags_vertical = 4
custom_styles/separator = SubResource( 3 )

[node name="VSeparator" type="VSeparator" parent="HBoxContainer"]
margin_left = 1844.0
margin_right = 1848.0
margin_bottom = 30.0
custom_styles/separator = SubResource( 2 )

[node name="Edit" type="Button" parent="HBoxContainer"]
margin_left = 1852.0
margin_right = 1880.0
margin_bottom = 30.0
rect_min_size = Vector2( 28, 0 )
hint_tooltip = "Modifier"
focus_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 5 )
flat = true
expand_icon = true

[node name="Delete" type="Button" parent="HBoxContainer"]
margin_left = 1884.0
margin_right = 1912.0
margin_bottom = 30.0
rect_min_size = Vector2( 28, 0 )
hint_tooltip = "Supprimer"
focus_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 4 )
flat = true
expand_icon = true

[connection signal="tree_exited" from="." to="." method="_on_tree_exited"]
[connection signal="toggled" from="HBoxContainer/CheckBox" to="." method="_on_CheckBox_toggled"]
[connection signal="pressed" from="HBoxContainer/Delete" to="." method="_on_Delete_pressed"]
